--- a/package.json
+++ b/package.json
@@ -1,50 +1,61 @@
 {
   "name": "agricult",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Mobile and web app for farmers with offline capabilities",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "clear-cache": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "expo-go": "expo start --dev-client",
+    "tunnel": "expo start --tunnel",
+    "start:backend": "cd backend && npm run start",
+    "dev:backend": "cd backend && npm run dev",
+    "start:all": "concurrently \"npm run start\" \"npm run dev:backend\"",
     "start-offline": "REACT_NATIVE_OFFLINE_MODE=true expo start",
-    "build:android": "expo build:android",
-    "build:ios": "expo build:ios"
+    "start:flask": "cd flsk_script && python run_server.py",
+    "start:full": "node run-all.js"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/netinfo": "^11.4.1",
-    "@react-navigation/bottom-tabs": "^7.3.9",
-    "@react-navigation/native": "^7.1.5",
-    "@react-navigation/native-stack": "^7.3.9",
-    "expo": "~52.0.43",
-    "expo-asset": "^11.0.5",
-    "expo-av": "^15.0.2",
-    "expo-file-system": "^16.0.7",
-    "expo-image-manipulator": "^11.8.0",
-    "expo-image-picker": "^14.7.1",
-    "expo-localization": "^14.6.0",
-    "expo-screen-orientation": "^8.0.4",
-    "expo-sqlite": "^13.2.2",
-    "expo-status-bar": "~2.0.1",
-    "i18n-js": "^4.3.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/netinfo": "9.3.7",
+    "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.4.0",
+    "expo": "~48.0.18",
+    "expo-asset": "~8.9.1",
+    "expo-av": "~13.2.1",
+    "expo-constants": "~14.2.1",
+    "expo-file-system": "~15.2.2",
+    "expo-image-manipulator": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-localization": "~14.1.1",
+    "expo-location": "~15.1.1",
+    "expo-screen-orientation": "~5.1.1",
+    "expo-speech": "~11.1.1",
+    "expo-sqlite": "~11.1.1",
+    "expo-status-bar": "~1.4.4",
+    "i18n-js": "^4.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.14",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "^2.25.0",
-    "react-native-reanimated": "^3.17.2",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0",
-    "react-native-svg": "^15.11.2",
-    "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-voice": "^0.3.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.4"
+    "concurrently": "^8.0.1"
   },
   "private": true
 }
