change name agricult to smartsethi on demand of divyal

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agricult",
+  "name": "smartsheti",
   "version": "1.0.0",
   "description": "Mobile and web app for farmers with offline capabilities",
   "main": "node_modules/expo/AppEntry.js",
