--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Agricult",
-    "slug": "agricult",
+    "name": "SmartSheti",
+    "slug": "smartsheti",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
